--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ hex = "0.4.3"
 log = "0.4.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+
+[dev-dependencies]
+tempfile = "3"
