--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ description = "Utilities for building Alfred workflows with Rust."
 license = "MIT"
 
 [dependencies]
+chrono = "0"
 clap = { version = "4.5.4", features = ["derive", "env"] }
-clipboard = "0.5.0"
-fuzzy-matcher = "0.3.7"
-hex = "0.4.3"
-log = "0.4.20"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+clipboard = "0"
+fuzzy-matcher = "0"
+hex = "0.4"
+log = "0.4"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+sysinfo = "0"
 
 [dev-dependencies]
 tempfile = "3"
