--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ license = "MIT"
 chrono = "0"
 clap = { version = "4.5", features = ["derive", "env"] }
 clipboard = "0"
+env_logger = "0.11"
 fuzzy-matcher = "0"
 hex = "0.4"
+humantime = "2"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
