--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,8 @@ sysinfo = "0"
 tokio = { version = "1", features = ["full"]}
 
 [dev-dependencies]
+# Clap is used in examples/
+clap = { version = "4", features = ["derive", "env"]}
+reqwest = { version = "0", features = ["json"] }
 tempfile = "3"
 tokio = { version = "1", features = ["full", "test-util"] }
