--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sysinfo = "0"
+thiserror = "2"
 tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 # Clap is used in examples/
 clap = { version = "4", features = ["derive", "env"] }
 reqwest = { version = "0", features = ["json"] }
-temp-env = "0.3"
+temp-env = "0"
 tempfile = "3"
 tokio = { version = "1", features = ["full", "test-util"] }
