--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0"
 clap = { version = "4.5", features = ["derive", "env"] }
 clipboard = "0"
 env_logger = "0.11"
+fern = { version = "0.7", features = ["colored"] }
 fuzzy-matcher = "0"
 hex = "0.4"
 humantime = "2"
