--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  ci:
+  build-and-test:
+    name: Build & Test (macOS)
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
