chore: improve CI, release automation, and publishing metadata
Split monolithic CI job into 5 parallel jobs (fmt, clippy, build, docs,
test) using taiki-e/install-action for faster tool installation. Add
tag-triggered release workflow for GitHub Releases and crates.io
publishing. Update CHANGELOG.md to Keep a Changelog format with
comparison links. Add Cargo.toml publishing metadata and exclude
patterns. Standardize pre-commit hook with exec. Fix clippy
unnecessary_unwrap warnings in url_item.rs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,24 +10,62 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-and-test:
-    name: Build & Test (macOS)
+  fmt:
+    name: Format
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
+      - run: cargo fmt --all -- --check
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+  clippy:
+    name: Clippy
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo clippy --all-targets --all-features --examples -- -D warnings
 
-      - name: Cache Rust
-        uses: Swatinem/rust-cache@v2
+  build:
+    name: Build
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo build --all-targets --all-features --examples
 
-      - name: Run CI
-        run: make ci
+  docs:
+    name: Docs
+    runs-on: macos-latest
+    env:
+      RUSTDOCFLAGS: -D warnings
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo doc --no-deps
 
-      - name: Generate coverage
-        run: make coverage-ci
-
+  test:
+    name: Test
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
+      - uses: taiki-e/install-action@cargo-llvm-cov
+      - uses: taiki-e/install-action@nextest
+      - name: Run tests with coverage
+        run: |
+          cargo llvm-cov clean --workspace
+          cargo llvm-cov nextest --all-features --examples --tests --lcov --output-path lcov.info -- --test-threads 1
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
