fix: replace flaky external API test with wiremock mock server
The random_user example test was hitting the live randomuser.me API,
which now returns empty results. Replace with wiremock-based tests that
use a local mock server for reliable HTTP integration testing. Add
configurable api_url to RandomUserWorkflow for testability. Also exclude
.idea/ from cargo package.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ documentation = "https://docs.rs/alfrusco"
 readme = "README.md"
 keywords = ["alfred", "workflow", "macos", "automation"]
 categories = ["os::macos-apis", "gui"]
-exclude = [".cargo-husky/", ".claude/", ".github/", "workflow/", "AGENTS.md"]
+exclude = [".cargo-husky/", ".claude/", ".github/", ".idea/", "workflow/", "AGENTS.md"]
 
 [dependencies]
 async-trait = "0.1"
@@ -34,6 +34,7 @@ tokio = { version = "1", features = ["full"] }
 clap = { version = "4", features = ["derive", "env"] }
 reqwest = { version = "0.12", features = ["json"] }
 temp-env = "0.3"
+wiremock = "0.6"
 tempfile = "3"
 tokio = { version = "1", features = ["full", "test-util"] }
 cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
