--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,11 +61,10 @@ jobs:
         with:
           cache-on-failure: true
       - uses: taiki-e/install-action@cargo-llvm-cov
-      - uses: taiki-e/install-action@nextest
       - name: Run tests with coverage
         run: |
           cargo llvm-cov clean --workspace
-          cargo llvm-cov nextest --all-features --examples --tests --lcov --output-path lcov.info -- --test-threads 1
+          cargo llvm-cov --all-features --examples --tests --lcov --output-path lcov.info -- --test-threads 1
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
